--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,18 +6,34 @@ bstats-integration: true
 # played to the player indicating the debug stick is being held or not.
 sound-on-select: true
 
+# When the player doesn't do something correct with the plugin in game, they will be notified
+# with a sound and a message telling them what they did wrong. If this is disabled, the message
+# will still send, just not the sound.
+sound-on-error: true
+
 # Settings for when a player wants to change between debug modes.
 mode-shift:
 
-  # When enabling and disabling the mode selector, should a sound be played?
+  # If command shifting is enabled, the next 4 configuration nodes after this will not do anything. This makes it so
+  # command shifting will need to be done via the debug stick command rather than just double shifting to enable/disable
+  # the mode shifter.
+  command-shifting: false
+
+  # When enabling and disabling the mode selector, should a sound be played? (Note: command-shifting must be false)
   start-stop-sound: true
 
-  # When going to the next mode, should a sound be played?
+  # When going to the next mode, should a sound be played? (Note: command-shifting must be false)
   mode-change-sound: true
 
   # When shifting between modes, how quickly (in milliseconds... 1000 milliseconds = 1 second) must a player double sneak
   # in order for it to be detected as them wanting to change debug modes? Typically anything lower than 500ms is unusable.
+  # (Note: command-shifting must be false)
   double-sneak-timeout: 750
+
+  # How long (in milliseconds... 1000 milliseconds = 1 second) should the user wait before being able to change to a
+  # different debug mode? In a nutshell, after you double shift to close the mode shifter, by default, 2 seconds can go
+  # by where you can spam shift and the mode shifter will not pop up. (Note: command-shifting must be false)
+  mode-change-cooldown: 2000
 
 # Settings for the classic debug mode. This mode acts like the standard debug stick
 classic-debug-mode:
