--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,18 @@
             <id>coreprotect</id>
             <url>http://maven.playpro.com/</url>
         </repository>
+        <repository>
+            <id>p2-repo</id>
+            <url>http://ci.athion.net/job/PlotSquared-Breaking/ws/mvn/</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+        <repository>
+            <id>sk89q</id>
+            <url>http://maven.sk89q.com/repo/</url>
+        </repository>
     </repositories>
 
     <build>
@@ -111,6 +123,12 @@
             <artifactId>coreprotect</artifactId>
             <version>2.15.0</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.intellectualsites.plotsquared</groupId>
+            <artifactId>PlotSquared-API</artifactId>
+            <version>LATEST</version>
         </dependency>
 
     </dependencies>
