--- a/pom.xml
+++ b/pom.xml
@@ -17,18 +17,22 @@
             <id>coreprotect</id>
             <url>http://maven.playpro.com/</url>
         </repository>
+        <!-- PlotSquared repository -->
         <repository>
             <id>p2-repo</id>
             <url>http://ci.athion.net/job/PlotSquared-Breaking/ws/mvn/</url>
         </repository>
-        <repository>
+        <!-- Jenkins4J -->
+        <!--<repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
-        </repository>
-        <repository>
+        </repository>-->
+        <!-- WorldEdit -->
+       <!-- <repository>
             <id>sk89q</id>
             <url>http://maven.sk89q.com/repo/</url>
-        </repository>
+        </repository>-->
+
     </repositories>
 
     <build>
@@ -123,12 +127,25 @@
             <artifactId>coreprotect</artifactId>
             <version>2.15.0</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
             <groupId>com.github.intellectualsites.plotsquared</groupId>
             <artifactId>PlotSquared-API</artifactId>
-            <version>LATEST</version>
+            <version>4.366</version>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
     </dependencies>
