--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.njdaeger</groupId>
     <artifactId>EnhancedDebugStick</artifactId>
-    <version>1.3.0</version>
+    <version>1.3.1</version>
 
     <repositories>
         <repository>
@@ -17,10 +17,15 @@
             <id>coreprotect</id>
             <url>http://maven.playpro.com/</url>
         </repository>
-        <!-- PlotSquared repository -->
+        <!-- WorldEdit -->
         <repository>
-            <id>p2-repo</id>
-            <url>http://ci.athion.net/job/PlotSquared-Breaking/ws/mvn/</url>
+            <id>enginehub</id>
+            <url>https://maven.enginehub.org/repo/</url>
+        </repository>
+        <!-- PlotSquared -->
+        <repository>
+            <id>plotsquared</id>
+            <url>https://plotsquared.com/mvn/</url>
         </repository>
         <!-- Jenkins4J -->
         <!--<repository>
@@ -136,9 +141,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.intellectualsites.plotsquared</groupId>
-            <artifactId>PlotSquared-API</artifactId>
-            <version>4.366</version>
+            <groupId>com.plotsquared</groupId>
+            <artifactId>PlotSquared</artifactId>
+            <version>5.1</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
