--- a/pom.xml
+++ b/pom.xml
@@ -6,42 +6,21 @@
 
     <groupId>com.njdaeger</groupId>
     <artifactId>EnhancedDebugStick</artifactId>
-    <version>1.3.1</version>
-
-    <repositories>
-        <repository>
-            <id>spigot</id>
-            <url>https://hub.spigotmc.org/nexus/content/groups/public/org/spigotmc/spigot-api/</url>
-        </repository>
-        <repository>
-            <id>coreprotect</id>
-            <url>http://maven.playpro.com/</url>
-        </repository>
-        <!-- WorldEdit -->
-        <repository>
-            <id>enginehub</id>
-            <url>https://maven.enginehub.org/repo/</url>
-        </repository>
-        <!-- PlotSquared -->
-        <repository>
-            <id>plotsquared</id>
-            <url>https://plotsquared.com/mvn/</url>
-        </repository>
-        <!-- Jenkins4J -->
-        <!--<repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>-->
-        <!-- WorldEdit -->
-       <!-- <repository>
-            <id>sk89q</id>
-            <url>http://maven.sk89q.com/repo/</url>
-        </repository>-->
-
-    </repositories>
+    <packaging>pom</packaging>
+    <version>1.4</version>
+    <modules>
+        <module>eds-v113impl</module>
+        <module>eds-v114impl</module>
+        <module>eds-v115impl</module>
+        <module>eds-v116impl</module>
+        <module>eds-core</module>
+        <module>eds-jar</module>
+    </modules>
 
     <build>
+
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -52,41 +31,12 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.1</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <relocations>
-                        <relocation>
-                            <pattern>com.njdaeger.bci</pattern>
-                            <shadedPattern>com.njdaeger.enhanceddebugstick.libs.bci</shadedPattern>
-                        </relocation>
-                        <relocation>
-                            <pattern>com.njdaeger.btu</pattern>
-                            <shadedPattern>com.njdaeger.enhanceddebugstick.libs.btu</shadedPattern>
-                        </relocation>
-                        <relocation>
-                            <pattern>com.njdaeger.bcm</pattern>
-                            <shadedPattern>com.njdaeger.enhanceddebugstick.libs.bcm</shadedPattern>
-                        </relocation>
-                    </relocations>
-                </configuration>
-            </plugin>
 
         </plugins>
 
         <resources>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>core/src/main/resources</directory>
                 <filtering>true</filtering>
                 <includes>
                     <include>plugin.yml</include>
@@ -96,63 +46,5 @@
         </resources>
 
     </build>
-
-    <dependencies>
-
-        <dependency>
-            <groupId>com.njdaeger</groupId>
-            <artifactId>BukkitCommandInterface</artifactId>
-            <version>0.0.1</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.njdaeger</groupId>
-            <artifactId>BukkitConfigManager</artifactId>
-            <version>0.0.2</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.njdaeger</groupId>
-            <artifactId>BukkitTextUtils</artifactId>
-            <version>0.0.1</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>1.15.2-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>net.coreprotect</groupId>
-            <artifactId>coreprotect</artifactId>
-            <version>2.15.0</version>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>com.plotsquared</groupId>
-            <artifactId>PlotSquared</artifactId>
-            <version>5.1</version>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-    </dependencies>
 
 </project>
