--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>eds-v116impl</module>
         <module>eds-core</module>
         <module>eds-jar</module>
+        <module>eds-coreprotect-v6</module>
+        <module>eds-plotsquared</module>
     </modules>
 
     <build>
