--- a/eds-plotsquared/src/main/resources/plugin.yml
+++ b/eds-plotsquared/src/main/resources/plugin.yml
@@ -1,5 +1,8 @@
 main: com.njdaeger.enhanceddebugstick.plotsquared.PS_Impl
-name: ${project.artifactId}
+name: ${project.parent.artifactId}-PlotSquared
 version: ${project.version}
 api-version: 1.13
 author: NJDaeger
+depend:
+  - ${project.parent.artifactId}
+  - PlotSquared
