--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <module>eds-v116impl</module>
         <module>eds-core</module>
         <module>eds-jar</module>
-        <module>eds-coreprotect-v6</module>
+        <module>eds-coreprotect</module>
         <module>eds-plotsquared</module>
     </modules>
 
