--- a/eds-core/pom.xml
+++ b/eds-core/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>EnhancedDebugStick</artifactId>
         <groupId>com.njdaeger</groupId>
-        <version>1.4</version>
+        <version>1.4.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>eds-core</artifactId>
-    <version>1.4</version>
+    <version>${parent.version}</version>
 
     <repositories>
         <repository>
