--- a/eds-plotsquared/pom.xml
+++ b/eds-plotsquared/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>EnhancedDebugStick</artifactId>
         <groupId>com.njdaeger</groupId>
-        <version>1.4</version>
+        <version>LATEST</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
