--- a/eds-jar/pom.xml
+++ b/eds-jar/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>EnhancedDebugStick</artifactId>
         <groupId>com.njdaeger</groupId>
-        <version>1.4</version>
+        <version>1.4.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>eds-jar</artifactId>
-    <version>1.4</version>
+    <version>1.4.1</version>
 
     <dependencies>
         <dependency>
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-core</artifactId>
-            <version>1.4</version>
+            <version>1.4.1</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-v113impl</artifactId>
-            <version>1.4</version>
+            <version>1.4.1</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-v114impl</artifactId>
-            <version>1.4</version>
+            <version>1.4.1</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-v115impl</artifactId>
-            <version>1.4</version>
+            <version>1.4.1</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-v116impl</artifactId>
-            <version>1.4</version>
+            <version>1.4.1</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -118,7 +118,7 @@
 
         </plugins>
 
-        <resources>
+<!--        <resources>
             <resource>
                 <directory>core/src/main/resources</directory>
                 <filtering>true</filtering>
@@ -127,7 +127,7 @@
                     <include>config.yml</include>
                 </includes>
             </resource>
-        </resources>
+        </resources>-->
 
     </build>
 
