--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,13 @@
     <artifactId>EnhancedDebugStick</artifactId>
     <packaging>pom</packaging>
     <version>1.4.1</version>
+
     <modules>
         <module>eds-v113impl</module>
         <module>eds-v114impl</module>
         <module>eds-v115impl</module>
         <module>eds-v116impl</module>
+        <module>eds-v117impl</module>
         <module>eds-core</module>
         <module>eds-jar</module>
         <module>eds-coreprotect</module>
@@ -29,8 +31,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>16</source>
+                    <target>16</target>
                 </configuration>
             </plugin>
 
