--- a/eds-blacklist/pom.xml
+++ b/eds-blacklist/pom.xml
@@ -21,15 +21,15 @@
     <dependencies>
         <dependency>
             <groupId>com.njdaeger</groupId>
-            <artifactId>eds-core</artifactId>
-            <version>1.4.3</version>
+            <artifactId>eds-api</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
-            <version>1.16.2-R0.1-SNAPSHOT</version>
+            <version>1.19.4-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
