--- a/eds-blacklist/pom.xml
+++ b/eds-blacklist/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>EnhancedDebugStick</artifactId>
         <groupId>com.njdaeger</groupId>
-        <version>1.4.3</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>eds-blacklist</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
 
 
     <properties>
