--- a/eds-plotsquared/pom.xml
+++ b/eds-plotsquared/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>EnhancedDebugStick</artifactId>
         <groupId>com.njdaeger</groupId>
-        <version>1.4.3</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>eds-plotsquared</artifactId>
-    <version>1.1</version>
+    <version>1.2</version>
 
     <repositories>
         <repository>
@@ -26,8 +26,8 @@
     <dependencies>
         <dependency>
             <groupId>com.njdaeger</groupId>
-            <artifactId>eds-core</artifactId>
-            <version>1.4.3</version>
+            <artifactId>eds-api</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
