--- a/eds-v118impl/pom.xml
+++ b/eds-v118impl/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>EnhancedDebugStick</artifactId>
         <groupId>com.njdaeger</groupId>
-        <version>1.4.3</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>eds-v118impl</artifactId>
-    <version>1.4.3</version>
+    <version>2.0.0-SNAPSHOT</version>
 
     <repositories>
         <repository>
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-core</artifactId>
-            <version>1.4.3</version>
+            <version>2.0.0-SNAPSHOT</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
@@ -42,7 +42,7 @@
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-api</artifactId>
             <version>2.0.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
