--- a/eds-worldguard/pom.xml
+++ b/eds-worldguard/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <artifactId>EnhancedDebugStick</artifactId>
         <groupId>com.njdaeger</groupId>
-        <version>1.4.3</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>eds-worldguard</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
 
     <repositories>
         <repository>
@@ -23,8 +23,8 @@
     <dependencies>
         <dependency>
             <groupId>com.njdaeger</groupId>
-            <artifactId>eds-core</artifactId>
-            <version>1.4.3</version>
+            <artifactId>eds-api</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
