--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.njdaeger</groupId>
     <artifactId>EnhancedDebugStick</artifactId>
     <packaging>pom</packaging>
-    <version>1.4.3</version>
+    <version>2.0.0-SNAPSHOT</version>
 
     <modules>
         <module>eds-v113impl</module>
