--- a/eds-core/pom.xml
+++ b/eds-core/pom.xml
@@ -69,6 +69,7 @@
                 <includes>
                     <include>plugin.yml</include>
                     <include>config.yml</include>
+                    <include>en_US.yml</include>
                 </includes>
             </resource>
         </resources>
